--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
@@ -10,5 +10,13 @@
 		<key>showName</key>
 		<string>first</string>
 	</dict>
+	<dict>
+		<key>desc</key>
+		<string>功能测试</string>
+		<key>routerVC</key>
+		<string>FuncTestVC</string>
+		<key>showName</key>
+		<string>功能测试</string>
+	</dict>
 </array>
 </plist>
