--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
@@ -18,5 +18,13 @@
 		<key>showName</key>
 		<string>功能测试</string>
 	</dict>
+	<dict>
+		<key>desc</key>
+		<string>手势测试</string>
+		<key>routerVC</key>
+		<string>GestureTestVC</string>
+		<key>showName</key>
+		<string>手势测试</string>
+	</dict>
 </array>
 </plist>
