-功能[ collection动画 ] -备注[ ]

--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
@@ -26,5 +26,13 @@
 		<key>showName</key>
 		<string>手势测试</string>
 	</dict>
+	<dict>
+		<key>desc</key>
+		<string>手势测试</string>
+		<key>routerVC</key>
+		<string>CollectionViewController</string>
+		<key>showName</key>
+		<string>手势测试</string>
+	</dict>
 </array>
 </plist>
