--- a/Swift_SweetSugar/Podfile
+++ b/Swift_SweetSugar/Podfile
@@ -7,6 +7,7 @@ target 'Swift_SweetSugar' do
   pod 'Kingfisher'
   pod 'HandyJSON'
   pod 'YYText'
+  pod 'SnapKit'
   # Pods for Swift_SweetSugar
 
   target 'Swift_SweetSugarTests' do
