--- a/Swift_SweetSugar/Swift_SweetSugar/Info.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>用你相册</string>
 </dict>
 </plist>
