--- a/Swift_SweetSugar/Swift_SweetSugar/Info.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/Info.plist
@@ -27,6 +27,10 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>用你相册</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>给我用下 ？</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>给我用下 吧？</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -52,9 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSUserActivityTypes</key>
-    <array>
-        <string>com.mumu.func</string>
-    </array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.mumu.func</string>
+	</array>
 </dict>
 </plist>
