--- a/Swift_SweetSugar/Swift_SweetSugar/Info.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/Info.plist
@@ -60,5 +60,9 @@
 	<array>
 		<string>com.mumu.func</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>iconfont.ttf</string>
+	</array>
 </dict>
 </plist>
