--- a/Swift_SweetSugar/Podfile
+++ b/Swift_SweetSugar/Podfile
@@ -1,5 +1,6 @@
 # Uncomment the next line to define a global platform for your project
  platform :ios, '11.0'
+source 'https://cdn.cocoapods.org/'
 
 #flipperkit_version = '0.128.2'
 
