--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
@@ -114,5 +114,13 @@
 		<key>showName</key>
 		<string>富文本</string>
 	</dict>
+	<dict>
+		<key>desc</key>
+		<string>scroll</string>
+		<key>routerVC</key>
+		<string>ScrollTestViewController</string>
+		<key>showName</key>
+		<string>嵌套滚动测试</string>
+	</dict>
 </array>
 </plist>
