--- a/Swift_SweetSugar/Podfile
+++ b/Swift_SweetSugar/Podfile
@@ -16,6 +16,8 @@ target 'Swift_SweetSugar' do
   pod 'SnapKit'
   pod 'lottie-ios', '~> 3.2.3'
   pod 'SwiftyJSON'
+  pod 'testDev', :path => './testDev/'
+
   # Pods for Swift_SweetSugar
 
   #调试
@@ -63,11 +65,31 @@ target 'Swift_SweetSugar' do
 
 end
 
+#def fix_config(config)
+#  # https://github.com/CocoaPods/CocoaPods/issues/8891
+#  if config.build_settings['DEVELOPMENT_TEAM'].nil?
+#    config.build_settings['DEVELOPMENT_TEAM'] = 'T6H68KJ4WD'
+#  end
+#end
 
-target 'SubProject_1' do
-  use_frameworks!
+#post_install do |installer|
+#  installer.pods_project.targets.each do |target|
+#    target.build_configurations.each do |config|
+#      if target.name.include? 'TransWidgetExtension'
+###      elsif target.name.include? 'YDTExtentionService' then
+###      elsif target.name.include? 'YDTWidget' then
+##                     config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+#      else
+#        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+#      end
+#      #      target.build_settings(config.name)['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+#      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+#
+#      #Require Only AppExtension-Safe
+#      config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+#      fix_config(config)
+#    end
+#  end
+#end
 
-  project 'SubProject_1/SubProject_1.xcodeproj'
-  
-  pod 'SnapKit', :modular_headers => true
-end
+
