--- a/Swift_SweetSugar/Swift_SweetSugar.xcodeproj/xcshareddata/xcschemes/Swift_SweetSugar.xcscheme
+++ b/Swift_SweetSugar/Swift_SweetSugar.xcodeproj/xcshareddata/xcschemes/Swift_SweetSugar.xcscheme
@@ -70,6 +70,28 @@
             ReferencedContainer = "container:Swift_SweetSugar.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "PrefersMallocStackLoggingLite"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
