--- a/Swift_SweetSugar/Podfile
+++ b/Swift_SweetSugar/Podfile
@@ -19,6 +19,8 @@ target 'Swift_SweetSugar' do
   pod 'testDev', :path => './testDev/'
   
   pod 'MLeaksFinder', :configurations => ['Debug']
+  pod 'FBRetainCycleDetector', :git => 'git@gitlab.corp.youdao.com:lunafork/FBRetainCycleDetector.git', :branch => 'feature/yd_dev'
+  pod 'LookinServer', :configurations => ['Debug']
   # Pods for Swift_SweetSugar
 
   #调试
@@ -73,24 +75,24 @@ end
 #  end
 #end
 
-#post_install do |installer|
-#  installer.pods_project.targets.each do |target|
-#    target.build_configurations.each do |config|
-#      if target.name.include? 'TransWidgetExtension'
-###      elsif target.name.include? 'YDTExtentionService' then
-###      elsif target.name.include? 'YDTWidget' then
-##                     config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
-#      else
-#        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
-#      end
-#      #      target.build_settings(config.name)['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-#      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-#
-#      #Require Only AppExtension-Safe
-#      config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
-#      fix_config(config)
-#    end
-#  end
-#end
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      #      if target.name.include? 'TransWidgetExtension'
+      ##      elsif target.name.include? 'YDTExtentionService' then
+      ##      elsif target.name.include? 'YDTWidget' then
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      #      else
+      #      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+      #    end
+      #      target.build_settings(config.name)['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      #    config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      
+      #Require Only AppExtension-Safe
+      #    config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+      #    fix_config(config)
+    end
+  end
+end
 
 
