--- a/Swift_SweetSugar/Swift_SweetSugar/Info.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/Info.plist
@@ -35,6 +35,8 @@
 	<string>给我用下 ？</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>给我用下 吧？</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>用一下</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>用你相册</string>
 	<key>NSUserActivityTypes</key>
@@ -48,6 +50,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
