--- a/Swift_SweetSugar/Swift_SweetSugar/Info.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/Info.plist
@@ -39,6 +39,8 @@
 	<string>用一下</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>用你相册</string>
+    <key>NSCameraUsageDescription</key>
+    <string>用你一下下</string>
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>com.mumu.func</string>
