add: 乱七八糟的测试

--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/home_list.plist
@@ -130,5 +130,13 @@
 		<key>showName</key>
 		<string>嵌套滚动测试</string>
 	</dict>
+	<dict>
+		<key>desc</key>
+		<string>scroll</string>
+		<key>routerVC</key>
+		<string>CustomScrollAnimationViewController</string>
+		<key>showName</key>
+		<string>自定义滚动动画</string>
+	</dict>
 </array>
 </plist>
