--- a/Swift_SweetSugar/Podfile
+++ b/Swift_SweetSugar/Podfile
@@ -16,7 +16,7 @@ target 'Swift_SweetSugar' do
   pod 'lottie-ios', '~> 3.2.3'
   pod 'SwiftyJSON'
   pod 'testDev', :path => './testDev/'
-  pod 'KSCrash'
+  pod 'KSCrash', '~> 1.17.4'
   
   pod 'MLeaksFinder', :configurations => ['Debug']
   pod 'FBRetainCycleDetector', :git => 'git@gitlab.corp.youdao.com:lunafork/FBRetainCycleDetector.git', :branch => 'feature/yd_dev'
